--- a/src/frontend/parlai-app/src/app/app.component.html
+++ b/src/frontend/parlai-app/src/app/app.component.html
@@ -1,11 +1,24 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center" class="mat-typography">
-  <h1>
-    {{ title }}
-  </h1>
-
-  <h2>Answering parliamentary questions with AI</h2>
-  <button mat-raised-button color="primary">Start</button>
-</div>
+<nav>
+  <ul>
+    <li>
+      <a [routerLink]="['/start']" routerLinkActive="active-link">start</a>
+    </li>
+    <li>
+      <a [routerLink]="['/upload']" routerLinkActive="active-link">upload</a>
+    </li>
+    <li>
+      <a [routerLink]="['/question-inspect']" routerLinkActive="active-link">question-inspect</a>
+    </li>
+    <li>
+      <a [routerLink]="['/question-compose']" routerLinkActive="active-link">question-compose</a>
+    </li>
+    <li>
+      <a [routerLink]="['/question-submitted']" routerLinkActive="active-link">question-submitted</a>
+    </li>
+    <li>
+      <a [routerLink]="['/document-view']" routerLinkActive="active-link">document-view</a>
+    </li>
+  </ul>
+</nav>
 
 <router-outlet></router-outlet>
