Added question-inspect component basic layout

--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -1,3 +1,91 @@
-<p>
-  question-inspect works!
-</p>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body class="mat-typography">
+
+  <div class="row">
+    <div class="column">
+      <h2>Please select a Question</h2>
+
+      <ul class="card">
+        <li>
+          <mat-card class="example-card">
+            <mat-card-header>
+              <mat-card-title>Question 1</mat-card-title>
+              <mat-card-subtitle>Fact Based Question</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+              <p>
+                What does the minister think about the report that blah blah.
+              </p>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button (click)="questionSelected('q1')">Select</button>
+            </mat-card-actions>
+          </mat-card>
+        </li>
+        <li>
+          <mat-card class="example-card">
+            <mat-card-header>
+              <mat-card-title>Question 2</mat-card-title>
+              <mat-card-subtitle>Fact Based Question</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+              <p>
+                What does the minister think about the report that blah blah.
+              </p>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button (click)="questionSelected('q2')">Select</button>
+            </mat-card-actions>
+          </mat-card>
+        </li>
+        <li>
+          <mat-card class="example-card">
+            <mat-card-header>
+              <mat-card-title>Question 3</mat-card-title>
+              <mat-card-subtitle>Fact Based Question</mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+              <p>
+                What does the minister think about the report that blah blah.
+              </p>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button>Select</button>
+            </mat-card-actions>
+          </mat-card>
+        </li>
+      </ul>
+
+    </div>
+    <div class="column">
+      <h2>Relevant Information</h2>
+
+      <div class="q1" *ngIf="selectedQuestion === 'q1'">
+        <p>
+          The following entities have been indentified in question 1:
+        </p>
+        <ul>
+          <li>Law 12 Paragraph 42</li>
+          <li>Den Haag Court</li>
+          <li>Telegraph newspaper</li>
+        </ul>
+      </div>
+
+      <div class="q2" *ngIf="selectedQuestion === 'q2'">
+          <p>
+            The following entities have been indentified in question 2:
+          </p>
+          <ul>
+            <li>Law 45 Paragraph 12</li>
+            <li>Ministry of Innovation</li>
+            <li>Leiden University</li>
+          </ul>
+        </div>
+
+    </div>
+  </div>
+
+</body>
