--- a/src/frontend/parlai-app/src/app/start/start.component.html
+++ b/src/frontend/parlai-app/src/app/start/start.component.html
@@ -4,5 +4,5 @@
   </h1>
 
   <h2>Answering parliamentary questions with AI</h2>
-  <button mat-raised-button color="primary">Start</button>
+  <button mat-raised-button color="primary" [routerLink]="['/upload']">Start</button>
 </div>
