--- a/src/frontend/parlai-app/src/app/app.component.html
+++ b/src/frontend/parlai-app/src/app/app.component.html
@@ -1,24 +1,12 @@
-<nav>
-  <ul>
-    <li>
-      <a [routerLink]="['/start']" routerLinkActive="active-link">start</a>
-    </li>
-    <li>
-      <a [routerLink]="['/upload']" routerLinkActive="active-link">upload</a>
-    </li>
-    <li>
-      <a [routerLink]="['/question-inspect']" routerLinkActive="active-link">question-inspect</a>
-    </li>
-    <li>
-      <a [routerLink]="['/question-compose']" routerLinkActive="active-link">question-compose</a>
-    </li>
-    <li>
-      <a [routerLink]="['/question-submitted']" routerLinkActive="active-link">question-submitted</a>
-    </li>
-    <li>
-      <a [routerLink]="['/document-view']" routerLinkActive="active-link">document-view</a>
-    </li>
-  </ul>
-</nav>
+<button mat-button [routerLink]="['/start']">parlAI</button>
+<button mat-button [matMenuTriggerFor]="menu">navigate</button>
+<mat-menu #menu="matMenu">
+  <button mat-menu-item [routerLink]="['/start']">start</button>
+  <button mat-menu-item [routerLink]="['/upload']">upload</button>
+  <button mat-menu-item [routerLink]="['/question-inspect']">question inspect</button>
+  <button mat-menu-item [routerLink]="['/question-compose']">question compose</button>
+  <button mat-menu-item [routerLink]="['/question-submitted']">question submitted</button>
+  <button mat-menu-item [routerLink]="['/document-view']">document view</button>
+</mat-menu>
 
 <router-outlet></router-outlet>
