Added document-view page with a dummy document

--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -68,7 +68,7 @@
           The following entities have been indentified in question 1:
         </p>
         <ul>
-          <li>Law 12 Paragraph 42</li>
+          <li> <a href="/document-view">Law 12 Paragraph 42 </a> </li>
           <li>Den Haag Court</li>
           <li>Telegraph newspaper</li>
         </ul>
