--- a/src/frontend/parlai-app/src/app/document-view/document-view.component.html
+++ b/src/frontend/parlai-app/src/app/document-view/document-view.component.html
@@ -1,3 +1,7 @@
-<p>
-  document-view works!
-</p>
+<div class="mat-typography">
+    <button mat-raised-button (click)="backClicked()">back</button>
+</div>
+<pdf-viewer [src]="pdfSrc" 
+            [render-text]="true"
+            style="display: block;"
+></pdf-viewer>
