Altered the upload screen

--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -1,3 +1,13 @@
-<p>
-  upload works!
-</p>
+<div style="text-align:center" class="mat-typography">
+  <h1>
+    Please upload your parliamentary questions
+  </h1>
+  <div class="form-wrapper">
+    <form action="#" class="submit-form">
+      <mat-form-field class="submit-form-full-width">
+        <textarea matInput placeholder="Paste your questions here"></textarea>
+      </mat-form-field>
+      <button mat-raised-button color="primary" [routerLink]="['/question-inspect']">Upload</button>
+    </form>
+  </div>
+</div>
