Added actual questions from a question document from the ministry: https://www.rijksoverheid.nl/documenten/kamerstukken/2018/12/11/beantwoording-kamervragen-van-het-lid-van-raan-pvdd-over-het-bericht-dat-het-vliegverkeer-over-de-buitenveldertbaan-sterk-is-toegenomen

--- a/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
+++ b/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
@@ -10,7 +10,7 @@
 
       <div>
         <p class="mat-body-strong">Question 1</p>
-        <p>This is question 1 and talks about blah blah blah blah.</p>
+        <p>Kent u het bericht «Schokkende toename vliegverkeer Buitenveldertbaan»?</p>
         <mat-form-field>
           <textarea matInput placeholder="Answer"></textarea>
         </mat-form-field>
@@ -18,7 +18,10 @@
 
       <div>
         <p class="mat-body-strong">Question 2</p>
-        <p>This is question 2 and talks about blah blah blah blah.</p>
+        <p>Klopt het dat in 2017 overdag 34% méér vliegtuigen gebruik hebben gemaakt van
+de Buitenveldertbaan? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het
+daggebruik van de Buitenveldertbaan terug te dringen?
+</p>
         <mat-form-field>
           <textarea matInput placeholder="Answer"></textarea>
         </mat-form-field>
@@ -26,11 +29,81 @@
 
       <div>
         <p class="mat-body-strong">Question 3</p>
-        <p>This is question 3 and talks about blah blah blah blah.</p>
+        <p>Klopt het dat in 2017 ‘s nachts 13% méér vliegtuigen gebruik hebben gemaakt
+van de Buitenveldertbaan? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het
+nachtgebruik van de Buitenveldertbaan terug te dringen?
+</p>
         <mat-form-field>
           <textarea matInput placeholder="Answer"></textarea>
         </mat-form-field>
       </div>
+        
+              <div>
+        <p class="mat-body-strong">Question 4</p>
+        <p>Bent u ermee bekend dat de inzet van de Buitenveldertbaan al jaren hoger is dan
+nodig? Zo nee, waaruit blijkt het tegendeel?
+
+</p>
+        <mat-form-field>
+          <textarea matInput placeholder="Answer"></textarea>
+        </mat-form-field>
+      </div>
+        
+              <div>
+        <p class="mat-body-strong">Question 5</p>
+        <p>Klopt het dat het percentage uren waarop geen vliegtuigen te horen zijn overdag
+slechts 37% bedraagt? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het
+aantal vliegtuigloze uren te verhogen?
+</p>
+        <mat-form-field>
+          <textarea matInput placeholder="Answer"></textarea>
+        </mat-form-field>
+      </div>
+        
+              <div>
+        <p class="mat-body-strong">Question 6</p>
+        <p>Klopt het dat het percentage uren waarop geen vliegtuigen te horen zijn in de
+nacht nog geen driekwart van de tijd bedraagt? Zo nee, hoe zit het dan? Zo ja,
+wat is uw inzet om het aantal vliegtuigloze uren te verhogen?
+</p>
+        <mat-form-field>
+          <textarea matInput placeholder="Answer"></textarea>
+        </mat-form-field>
+      </div>
+        
+              <div>
+        <p class="mat-body-strong">Question 7</p>
+        <p>Klopt het dat alle gemeten waarden 1 tot ruim 2 dB hoger liggen dan de door het
+Nederlands Lucht- en Ruimtevaartcentrum (in opdracht van Schiphol) berekende
+waarden? Zo nee, hoe zit het dan?
+
+</p>
+        <mat-form-field>
+          <textarea matInput placeholder="Answer"></textarea>
+        </mat-form-field>
+      </div>
+        
+              <div>
+        <p class="mat-body-strong">Question 8</p>
+        <p>Kunt u, naar aanleiding van deze berichtgeving, reflecteren op de ontwikkelingen
+op de woningmarkt in de regio rond Schiphol?
+</p>
+        <mat-form-field>
+          <textarea matInput placeholder="Answer"></textarea>
+        </mat-form-field>
+      </div>
+        
+              <div>
+        <p class="mat-body-strong">Question 9</p>
+        <p>Hoeveel woningen zijn er sinds 1990 jaarlijks gebouwd op plaatsen waar je
+vliegtuigen die gebruikmaken van de Buitenveldertbaan kan horen? Kunt u eenzelfde overzicht verschaffen van alle andere landingsbanen? Zo nee, waarom
+niet? 
+</p>
+        <mat-form-field>
+          <textarea matInput placeholder="Answer"></textarea>
+        </mat-form-field>
+      </div>
+        
     </div>
     <div class="column">
       <h2>Final Document</h2>
