Add text box when upload next question button is clicked

--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -1,13 +1,17 @@
 <div style="text-align:center" class="mat-typography">
-  <h1>
-    Please upload your parliamentary questions
-  </h1>
-  <div class="form-wrapper">
-    <form action="#" class="submit-form">
-      <mat-form-field class="submit-form-full-width">
-        <textarea matInput placeholder="Paste your questions here"></textarea>
-      </mat-form-field>
-      <button mat-raised-button color="primary" [routerLink]="['/question-inspect']">Upload</button>
-    </form>
-  </div>
+    <h1>
+        Please upload your parliamentary questions
+    </h1>
+    <div class="form-wrapper">
+        <form action="#" class="submit-form">
+
+            <div id="textAreas">
+                <mat-form-field class="submit-form-full-width">
+                    <textarea matInput placeholder="Paste your questions here"></textarea>
+                </mat-form-field>
+            </div>
+            <button mat-raised-button color="primary" (click)="addTextArea()" class="uploadButton">Upload Question</button>
+            <button mat-raised-button color="primary" class="uploadButton" [routerLink]="['/question-inspect']">Submit Questions</button>
+        </form>
+    </div>
 </div>
