--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -4,9 +4,7 @@
     </h1>
 
     <div class="form-wrapper">
-<!--
         <form [formGroup]="uploadForm">
--->
 
             <div formArrayName="items" 
                  *ngFor="let item of uploadForm.get('items').controls; let i = index;"> 
@@ -20,6 +18,6 @@
             <button mat-raised-button color="primary" (click)="addItem()" class="uploadButton">Upload Question</button>
             <button mat-raised-button color="primary" class="uploadButton" [routerLink]="['/question-inspect']">Submit Questions</button>
 
-       <!-- </form>-->
+        </form>
     </div>
 </div>
