--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -15,8 +15,8 @@
                     </div>
             </div>
 
-            <button mat-raised-button color="primary" (click)="addItem()" class="uploadButton">Upload Question</button>
-            <button mat-raised-button color="primary" class="uploadButton" [routerLink]="['/question-inspect']">Submit Questions</button>
+            <button mat-raised-button color="primary" (click)="addItem()" class="uploadButton">Upload new question</button>
+            <button mat-raised-button color="primary" class="uploadButton" [routerLink]="['/question-inspect']">Submit all questions</button>
 
         </form>
     </div>
