--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -1,23 +1,17 @@
 <div style="text-align:center" class="mat-typography">
-    <h1>
+    <h1 style="margin-top:50px;">
         Please upload your parliamentary questions
     </h1>
-
     <div class="form-wrapper">
-        <form [formGroup]="uploadForm">
+        <form action="#" class="submit-form">
 
-            <div formArrayName="items" 
-                 *ngFor="let item of uploadForm.get('items').controls; let i = index;"> 
-                    <div [formGroupName]="i">
-                        <mat-form-field class="submit-form-full-width">
-                            <textarea matInput formControlName="question" placeholder="Paste your question here"></textarea>
-                        </mat-form-field>
-                    </div>
+            <div id="textAreas">
+                <mat-form-field class="submit-form-full-width">
+                    <textarea matInput placeholder="Paste your questions here"></textarea>
+                </mat-form-field>
             </div>
-
-            <button mat-raised-button color="primary" (click)="addItem()" class="uploadButton">Upload Question</button>
+            <button mat-raised-button color="primary" (click)="addTextArea()" class="uploadButton">Upload Question</button>
             <button mat-raised-button color="primary" class="uploadButton" [routerLink]="['/question-inspect']">Submit Questions</button>
-
         </form>
     </div>
 </div>
