Made the relevant information always fixed to the top of the screen

--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -164,7 +164,7 @@ niet?
       </ul>
 
     </div>
-    <div class="column">
+    <div class="scrolling-column">
       <h2>Relevant Information</h2>
 
       <div class="q1" *ngIf="selectedQuestion === 'q1'">
