--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.scss
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.scss
@@ -10,6 +10,15 @@
     height: 300px; /* Should be removed. Only for demonstration */
 }
 
+.scrolling-column{
+    position: fixed;
+    top:5%;
+    left:50%;
+    width: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+}
+
 /* Clear floats after the columns */
 .row:after {
     content: "";
