Changed upload to add and enter, made compose final answer also fixed

--- a/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
+++ b/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
@@ -105,7 +105,7 @@ niet?
       </div>
         
     </div>
-    <div class="column">
+    <div class="scrolling-column">
       <h2>Final Document</h2>
 
       <button mat-raised-button color="primary" [routerLink]="['/question-submitted']">Submit Answer</button>
