--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -1,6 +1,6 @@
 <div style="text-align:center" class="mat-typography">
     <h1 style="margin-top:50px;">
-        Please upload your parliamentary questions
+        Please enter your parliamentary questions
     </h1>
 
     <div class="form-wrapper">
@@ -15,7 +15,7 @@
                     </div>
             </div>
 
-            <button mat-raised-button color="primary" (click)="addItem()" class="uploadButton">Upload new question</button>
+            <button mat-raised-button color="primary" (click)="addItem()" class="uploadButton">Add new question</button>
             <button mat-raised-button color="primary" class="uploadButton" [routerLink]="['/question-inspect']">Submit all questions</button>
 
         </form>
