Changed text of final submit screen

--- a/src/frontend/parlai-app/src/app/question-submitted/question-submitted.component.html
+++ b/src/frontend/parlai-app/src/app/question-submitted/question-submitted.component.html
@@ -3,7 +3,7 @@
       Answer was successfully submitted
     </h1>
   
-    <h2>Upload another question document?</h2>
+    <h2>Start entering a new set of questions?</h2>
     <button mat-raised-button color="primary" [routerLink]="['/upload']">Yes</button>
     <button mat-raised-button color="alert" [routerLink]="['/start']">No</button>
   </div>
