--- a/src/frontend/parlai-app/src/app/app.component.html
+++ b/src/frontend/parlai-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav id="systemNav">
+<nav class="sticky" id="systemNav">
     <div>
         <img class="system-logo"
              src="assets/logo.png"
