--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -1,3 +1,5 @@
+<div class="top-margin"></div>
+
 <div style="text-align:center" class="mat-typography">
     <h1 style="margin-top:50px;">
         Please enter your parliamentary questions
