--- a/src/frontend/parlai-app/src/app/document-view/document-view.component.html
+++ b/src/frontend/parlai-app/src/app/document-view/document-view.component.html
@@ -1,6 +1,9 @@
+<div class="top-margin"></div>
+<div class="fixed-button">
 <div class="mat-typography">
     <button mat-raised-button (click)="backClicked()">back</button>
 </div>
+    </div>
 <pdf-viewer [src]="pdfSrc" 
             [render-text]="true"
             style="display: block;"
