--- a/src/frontend/parlai-app/src/app/question-submitted/question-submitted.component.html
+++ b/src/frontend/parlai-app/src/app/question-submitted/question-submitted.component.html
@@ -1,9 +1,9 @@
 <div style="text-align:center" class="mat-typography">
-    <h1>
+    <h1 style="margin-top:50px;">
       Answer was successfully submitted
     </h1>
-  
+
     <h2>Upload another question document?</h2>
     <button mat-raised-button color="primary" [routerLink]="['/upload']">Yes</button>
-    <button mat-raised-button color="alert" [routerLink]="['/start']">No</button>
+    <button mat-raised-button color="alert" [routerLink]="['/endpage']">No</button>
   </div>
