Made spinner created by Michelle working in parlAI app upload screen

--- a/src/frontend/parlai-app/src/app/upload/upload.component.html
+++ b/src/frontend/parlai-app/src/app/upload/upload.component.html
@@ -19,7 +19,7 @@
             </div>
 
             <button mat-raised-button color="primary" (click)="addItem()" class="uploadButton">Add new question</button>
-            <button mat-raised-button color="primary" class="uploadButton" [routerLink]="['/question-inspect']">Submit all questions</button>
+            <button mat-raised-button color="primary" class="uploadButton" (click)="submitQuestion()">Submit all questions</button>
 
         </form>
     </div>
