--- a/src/frontend/parlai-app/src/app/end-page/end-page.component.html
+++ b/src/frontend/parlai-app/src/app/end-page/end-page.component.html
@@ -1,3 +1,4 @@
+<div class="top-margin"></div>
 <div style="text-align:center" class="mat-typography">
   <h1 style="margin-top:50px;">
     {{ title }}
